Add google analytics and Modified README.md

--- a/login/index.html
+++ b/login/index.html
@@ -6,7 +6,7 @@
     <title>판다마켓</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css"/>
     <link rel="stylesheet" href="font/pretendard.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/login_signup.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
             <input class="input_txt" name="userPassword" type="password" placeholder="비밀번호를 입력해주세요">
             <img src="../images/btn_visibility_off_24px.svg" alt="btn_visibility_off">
         </div>
-        <button class="btn_login">로그인</button>
+        <button class="btn">로그인</button>
     </form>
     <div class="sns_login">
         <span>간편 로그인하기</span>
@@ -38,9 +38,9 @@
             </a>
         </div>
     </div>
-    <div class="signup">
+    <div class="etc">
         <span>판다마켓이 처음이신가요?</span>
-        <a class="a_signup" href="../signup/">회원가입</a>
+        <a class="page_move" href="../signup/">회원가입</a>
     </div>
 </body>
 </html>
