--- a/signup/index.html
+++ b/signup/index.html
@@ -6,7 +6,7 @@
     <title>판다마켓</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css"/>
     <link rel="stylesheet" href="font/pretendard.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/login_signup.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
             <input class="input_txt" name="userPassword_check" type="password" placeholder="비밀번호를 다시 한 번 입력해주세요">
             <img src="../images/btn_visibility_off_24px.svg" alt="btn_visibility_off">
         </div>
-        <button class="btn_signup">회원가입</button>
+        <button class="btn">회원가입</button>
     </form>
     <div class="sns_login">
         <span>간편 로그인하기</span>
@@ -47,9 +47,9 @@
             </a>
         </div>
     </div>
-    <div class="login">
+    <div class="etc">
         <span>이미 회원이신가요?</span>
-        <a class="a_login" href="../login/">로그인</a>
+        <a class="page_move" href="../login/">로그인</a>
     </div>
 </body>
 </html>
